More work on angular files. Still trying to work out angular-route error

--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,18 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Text2Speech</title>
 
-    <!--Angular-->
-    <script src='lib/angular.min.js'></script>
-    <!--Angular Route-->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js'></script>
-
     <!--jQuery-->
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous">
     </script>
+
+    <!--Angular-->
+    <script src='lib/angular.min.js'></script>
+    <!--Angular Route-->
+    <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js'></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.js"></script>
 
     <!-- Latest compiled and minified CSS BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -31,14 +32,19 @@
     
     <nav class="navbar navbar-default">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Archives</a></li>
-        <li><a href="#">Create New</a></li>
+        <!--add class="active"?-->
+        <li><a href="#/">Archives</a></li>
+        <li><a href="#/create">Create New</a></li>
       </ul>
     </nav>
 
     <div ng-view>
     </div>
 
+    <script src="app/app.js"></script>
+    <script src="app/services/services.js"></script>
+    <script src="app/archive/archive.js"></script>
+    <script src="app/create/create.js"></script>
     
   </body>
 </html>
