Properly creating and deleting items using GUI

--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,12 @@
     <nav class="navbar navbar-default">
       <ul class="nav navbar-nav">
         <!--add class="active"?-->
-        <li><a href="#/">Archives</a></li>
-        <li><a href="#/create">Create New</a></li>
+        <li><a href="#!/">Archives</a></li>
+        <li><a href="#!/create">Create New</a></li>
       </ul>
     </nav>
 
+    
     <div ng-view>
     </div>
 
